--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-plugin-tensorflow",
+  "name": "babel-plugin-strip-typehint-imports",
   "version": "1.0.0",
   "description": "Transform Javascript operators to TensorFlow.js operators",
   "main": "dist/index.js",
@@ -25,6 +25,7 @@
     "dedent": "^0.7.0",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
+    "lodash": "^4.17.5",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
     "semantic-release": "^15.1.4",
@@ -33,5 +34,8 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "peerDependencies": {
+    "babel-core": "^6.26.0"
   }
 }
